--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ h6{
     color: var(--text-white);
     margin-bottom: 20px;
 }
-p{ 
+p{
     color: var(--text-gray);
     font-size: 16px;
     line-height: 28px;
@@ -145,9 +145,34 @@ button{
     -o-transition: all .2s linear;
     transition: all .2s linear;
 }
-.header_wrapper .navbar-brand img{
+/* .header_wrapper .navbar-brand img{
     max-width: 120px;
     height: auto;
+} */
+.header_wrapper .navbar-brand{
+    position: relative;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-gray);
+    display: inline-block;
+}
+.header_wrapper .navbar-brand::after{
+    position: absolute;
+    content: '';
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: var(--primary-color);
+    transition: 0.3s;
+    bottom: 0;
+}
+.header_wrapper .navbar-brand.active::after,
+.header_wrapper .navbar-brand:hover::after{
+    width: 100%;
+}
+.header_wrapper .navbar-brand.active,
+.header_wrapper .navbar-brand:hover{
+    color: var(--text-white);
 }
 .header_wrapper .navbar-toggler{
     border: 0;
